# sqlalchemy-practice

./: pyproject.toml
src/sqlalchemy_practice/: models.py
