[project]
name = "sqlalchemy-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Aymane Cheikh",email = "aymanecheikh2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "sqlalchemy_practice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
